# GPR-430-Pokemon

./: README.md
sec-1/sockets/: CMakeLists.txt  SerializationRules.txt  button.cpp  button.h  main.cpp  run_server.bat
sec-1/sockets/Networking/: client.cpp  client.h  poke_client.cpp  poke_client.h  poke_server.cpp  poke_server.h  server.cpp  server.h
sec-1/sockets/PokemonCreation/: Attacks.cpp  Attacks.h  MyParty.cpp  MyParty.h  Pokemon.cpp  Pokemon.h
sec-1/sockets/PokemonCreation/Pokemans/: Isaac.txt
sec-1/sockets/assets/Pokemans/: CoolNameLol.txt  Isaac.txt  John.txt  NELSON.txt
sec-1/sockets/inc/: Extras.h  GameManager.cpp  GameManager.h  SDL_stbimage.h  button.cpp  button.h  stb_image.h  ui.cpp  ui.h
sec-1/sockets/inc/Networking/: poke_client.cpp  poke_client.h  poke_server.cpp  poke_server.h
